--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,9 +2,14 @@
   margin-top: 45px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   min-height: 74px;
+  max-width: 880px;
 }
 
 @media screen and (max-width: 480px) {
+  .header {
+    margin: 28px 0 42px;
+  }
+
   .header__logo {
     width: 126px;
     height: 24px;
