--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,17 +2,23 @@
   background-color: black;
   color: white;
   margin-bottom: 60px;
+  padding: 0 20px;
 }
 
 .page__section {
   max-width: 880px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 20px;
 }
 
 .page__content {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+@media screen and (max-width: 620px) {
+  .page {
+    margin-bottom: 36px;
+  }
 }
