--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -71,7 +71,7 @@
   max-width: 373px;
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 810px) {
   .profile__add-button {
     width: 50px;
   }
@@ -83,7 +83,7 @@
   }
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 620px) {
   .profile {
     flex-direction: column;
   }
@@ -117,5 +117,11 @@
   }
   .profile__image {
     margin: 0;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .profile {
+    padding-top: 0;
   }
 }
